# automated-tiktok-poster

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
assets/: .gitkeep
output/: .gitkeep
scripts/: run_batch.sh  run_single.sh  setup.sh
src/reddit_mc_tiktok/: __init__.py  __main__.py  cli.py  config.py  models.py  reddit_client.py  story_filter.py  story_rewriter.py
src/reddit_mc_tiktok/tts/: __init__.py  api_tts_placeholder.py  base_tts.py  local_tts.py
src/reddit_mc_tiktok/video/: __init__.py  subtitles.py  video_builder.py
